# thesiscode

./: .gitignore  README
Visual Studio 2012 Solution/: PropertySheet.props  Visual Studio 2012 Solution.sln
Visual Studio 2012 Solution/Adapter/: Adapter.vcxproj  Adapter.vcxproj.filters
Visual Studio 2012 Solution/MMICTRL-Test/: MMICTRL-Test.vcxproj  main.cpp
Visual Studio 2012 Solution/UA Server/: UA Server.vcxproj  UA Server.vcxproj.filters
Visual Studio 2012 Solution/Wrapper/: Wrapper.vcxproj  Wrapper.vcxproj.filters
Visual Studio 2012 Solution/WrapperServer/: WrapperServer.vcxproj
Visual Studio 2012 Solution/WrapperTest/: WrapperTest.vcxproj  main.cpp
Wrapper/: 3achsenemcnclaserschneid.tt2pro  3achsenemcnclaserschneid.ua  AdapterConfig.xml  Makefile  adapter.cpp  adapter_inl.h  client.cpp  eckelmanncnc.ua  misc.cpp  misc.h  server.cpp  vdwcnc.ua  wrap_communication.cpp  wrap_communication.h  wrap_mmictrl.cpp  wrap_mmictrl.h  wrap_protocol.cpp  wrap_protocol.h
adapter/: Makefile  adapter.cpp
adapter/include/adapter/: adapter.h
gen_models/: demo_datatypes.h  demo_instancefactory_demo.cpp  demo_instancefactory_demo.h  demo_nodemanagerdemo.cpp  demo_nodemanagerdemo.h  demo_nodemanagerdemobase.h  eckelmanncnc_generatedfiles.txt  eckelmanncnc_instancefactory_ecnc.h  eckelmanncnc_nodemanagerecnc.h  eckelmanncnc_nodemanagerecncbase.cpp  eckelmanncnc_nodemanagerecncbase.h  opcuacnc_cncalarmtype.h  opcuacnc_cncalarmtypebase.cpp  opcuacnc_cncalarmtypebase.h  opcuacnc_cncaxislisttypebase.h  opcuacnc_cncaxistype.cpp  opcuacnc_cncaxistype.h  opcuacnc_cncchannellisttype.cpp  opcuacnc_cncchannellisttypebase.cpp  opcuacnc_cncchannellisttypebase.h  opcuacnc_cncchanneltype.h  opcuacnc_cncchanneltypebase.cpp  opcuacnc_cnccomponenttype.cpp  opcuacnc_cnccomponenttypebase.h  opcuacnc_cncdrivetype.cpp  opcuacnc_cncdrivetype.h  opcuacnc_cncdrivetypebase.cpp  opcuacnc_cncdrivetypebase.h  opcuacnc_cncinterfacetype.cpp  opcuacnc_cncinterfacetype.h  opcuacnc_cncinterfacetypebase.h  opcuacnc_cncmessagetype.cpp  opcuacnc_cncmessagetype.h  opcuacnc_cncpositiontype.cpp  opcuacnc_cncpositiontype.h  opcuacnc_cncspindlelisttypebase.cpp  opcuacnc_cncspindlelisttypebase.h  opcuacnc_cncspindletype.cpp  opcuacnc_cncspindletype.h  opcuacnc_cncspindletypebase.cpp  (+4 more)
models/: thesis_cnc.ua  thesis_eckelmann_cnc.ua
models/gen_models/: demo_generatedfiles.txt  demo_identifiers.h  demo_nodemanagerdemo.cpp  demo_nodemanagerdemo.h  demo_nodemanagerdemobase.cpp  eckelmanncnc_datatypes.h  eckelmanncnc_identifiers.h  eckelmanncnc_instancefactory_ecnc.cpp  eckelmanncnc_nodemanagerecnc.cpp  opcuacnc_cncalarmtype.cpp  opcuacnc_cncaxislisttype.cpp  opcuacnc_cncaxislisttype.h  opcuacnc_cncaxislisttypebase.cpp  opcuacnc_cncaxistypebase.cpp  opcuacnc_cncaxistypebase.h  opcuacnc_cncchannellisttype.h  opcuacnc_cncchanneltype.cpp  opcuacnc_cncchanneltypebase.h  opcuacnc_cnccomponenttype.h  opcuacnc_cnccomponenttypebase.cpp  opcuacnc_cncinterfacetypebase.cpp  opcuacnc_cncmessagetypebase.cpp  opcuacnc_cncmessagetypebase.h  opcuacnc_cncpositionvariabletype.cpp  opcuacnc_cncpositionvariabletype.h  opcuacnc_cncspindlelisttype.cpp  opcuacnc_cncspindlelisttype.h  opcuacnc_datatypes.cpp  opcuacnc_datatypes.h  opcuacnc_generatedfiles.txt  opcuacnc_identifiers.h  opcuacnc_instancefactory_cnc.cpp  opcuacnc_instancefactory_cnc.h  opcuacnc_nodemanagercnc.cpp  opcuacnc_nodemanagercnc.h  opcuacnc_nodemanagercncbase.h  thesiscnc_datatypes.h  thesiscnc_generatedfiles.txt  thesiscnc_identifiers.h  thesiscnc_instancefactory_tcnc.cpp  (+3 more)
uamodeler/: 3achsenemcnclaserschneid.tt2pro  3achsenemcnclaserschneid.ua  vdw_cnc.ua
uaserver/: AdapterConfig.xml  CMakeLists.txt  ServerConfig.xml  servermain.cpp
uaserver/cmake/: ConfigureCompiler.cmake  ConfigureCppSdk.cmake  ConfigureUaStack.cmake  FindUaLibXml2.cmake  FindUaOpenSSL.cmake
uaserver/utilities/: opcserver.cpp  opcserver.h  shutdown.cpp  shutdown.h
wrapper/: Makefile  adapter.cpp  adapter.h  client.cpp  eckelmanncnc.tt2pro  example_client.cpp  example_mmictrl_remote.cpp  example_server.cpp  misc.cpp  server.cpp  vdwcnc.tt2pro  wrap_client.cpp  wrap_client.h  wrap_communication.cpp  wrap_communication.h  wrap_misc.cpp  wrap_misc.h  wrap_misc_inl.h  wrap_mmictrl.cpp  wrap_mmictrl.h  wrap_mmictrl_local.cpp  wrap_mmictrl_local.h  wrap_mmictrl_remote.cpp  wrap_mmictrl_remote.h  wrap_network.cpp  wrap_network.h  wrap_protocol.cpp  wrap_protocol.h  wrap_server.cpp  wrap_server.h  wrap_server_mmictrl.cpp  wrap_server_mmictrl.h  wrapper.cpp
wrapper/include/adapter/: adapter.h
wrapper/include/wrapper/: wrapper.h
